evidence_library/EC2/regions/ap-northeast-1/allSecurityGroups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0707af14c6c4b5c78",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0561aef3edc508847",
            "SecurityGroupArn": "arn:aws:ec2:ap-northeast-1:111111111111:security-group/sg-0707af14c6c4b5c78",
            "OwnerId": "111111111111",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "111111111111",
                            "GroupId": "sg-0707af14c6c4b5c78"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ],
    "ResponseMetadata": {
        "RequestId": "f157700d-67a6-4db2-9037-e5e88e743ff5",
        "HTTPStatusCode": 200,
        "HTTPHeaders": {
            "x-amzn-requestid": "f157700d-67a6-4db2-9037-e5e88e743ff5",
            "cache-control": "no-cache, no-store",
            "strict-transport-security": "max-age=31536000; includeSubDomains",
            "content-type": "text/xml;charset=UTF-8",
            "content-length": "965",
            "date": "Fri, 06 Feb 2026 16:25:07 GMT",
            "server": "AmazonEC2"
        },
        "RetryAttempts": 0
    }
}
